--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="estilos.css">
     <script async src="https://www.tiktok.com/embed.js"></script>
 </head>
+<!-- WhatsApp Float Button -->
+<a href="https://wa.me/50241995025?text=🌹 ¡Hola Rosas Eternas! Visité su catálogo online y me interesan sus productos" 
+   class="whatsapp-float" 
+   target="_blank"
+   title="Chatear por WhatsApp">
+   💬
+   <span class="whatsapp-tooltip">¡Pedidos por WhatsApp!</span>
+</a>
 <body>
     <!-- Encabezado -->
     <header>
