--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Eterna - Felicidad</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<!-- Lightbox para zoom de imágenes -->
+<div id="lightbox" class="lightbox">
+    <span class="close-lightbox">&times;</span>
+    <div class="lightbox-nav">
+        <button class="lightbox-prev">&#10094;</button>
+        <button class="lightbox-next">&#10095;</button>
+    </div>
+    <div class="lightbox-content">
+        <img class="lightbox-image" id="lightbox-image" src="" alt="">
+        <div class="lightbox-caption" id="lightbox-caption"></div>
+    </div>
+</div>
 <body>
     <!-- Encabezado -->
     <header>
